--- a/app/src/main/res/layout/fragment_customer_services.xml
+++ b/app/src/main/res/layout/fragment_customer_services.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerServicesFragment">
+    tools:context=".Fragments.CustomerServicesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
