--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#98FB98</color>
-    <color name="colorPrimaryDark">#7BC063</color>
+    <color name="colorPrimary">#53D69F</color>
+    <color name="colorPrimaryDark">#1CC46F</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="facebook_blue">#3B5998</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
