--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,57 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Fragments.HomeFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:elevation="5dp">
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_product_category"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="10dp"
-                    />
+                    android:background="@color/white"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"/>
+
             </androidx.cardview.widget.CardView>
 
             <ImageView
                 android:src="@drawable/app_banner"
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="24dp"
+                android:paddingTop="18dp"
+                android:paddingBottom="18dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
-                android:text="Top Sales"
-                android:paddingStart="20dp"
+                android:text="@string/top_sales"
+                android:layout_marginStart="18dp"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                />
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
-                android:text="Curated From Our Fresh Farm"
-                android:paddingStart="20dp"
-                />
+                android:text="@string/top_sales_desc"
+                android:layout_marginStart="18dp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/material_dark"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_products"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                />
+                android:padding="8dp"
+                android:nestedScrollingEnabled="false" />
+
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
