--- a/app/src/main/res/layout/list_item_products.xml
+++ b/app/src/main/res/layout/list_item_products.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp"
     android:elevation="5dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginVertical="12dp"
-    >
+    android:layout_margin="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="12dp"
+        android:background="@color/white"
         >
 
     <ImageView
         android:id="@+id/iv_product"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_cauliflower_image"
         />
     <LinearLayout
@@ -36,12 +37,18 @@
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cauliflower"/>
+                android:text="Cauliflower"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:textColor="@color/material_dark"
+                android:fontFamily="@font/montserrat"/>
             <TextView
                 android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="40/kg"
+                android:textColor="@color/black"
+                android:fontFamily="@font/montserrat"
                 android:textStyle="bold"
                 android:textSize="18sp"/>
         </LinearLayout>
