--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="160dp"
@@ -7,43 +8,47 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackgroundBorderless"
-    android:gravity="bottom"
-    android:orientation="horizontal"
-    android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
         android:id="@+id/nav_header_imageView"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_gravity="center_vertical"
+        android:layout_centerInParent="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="18dp"
         android:background="@drawable/ic_user_icon" />
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingStart="20dp">
+        android:layout_centerInParent="true"
+        android:layout_marginStart="18dp"
+        android:layout_toEndOf="@+id/nav_header_imageView">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="16dp"
             android:layout_gravity="center_vertical"
-            android:textColor="#fff"
+            android:textColor="@color/white"
             android:textSize="20sp"
-            android:text="Account"/>
+            android:textStyle="bold"
+            android:text="@string/account"
+            android:fontFamily="@font/montserrat"/>
+
         <TextView
             android:id="@+id/nav_header_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:layout_gravity="center_vertical"
-
-            android:textColor="#fff"
+            android:textColor="@color/white"
             android:textSize="14sp"
-            android:text="kisan@example.com"/>
+            android:fontFamily="@font/montserrat"
+            android:text="@string/kisan_example_com"/>
+
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
