--- a/app/src/main/res/layout/fragment_special_offers.xml
+++ b/app/src/main/res/layout/fragment_special_offers.xml
@@ -5,16 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.OffersFragment">
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Offers Fragment"
-        android:fontFamily="@font/montserrat"
-        android:layout_centerInParent="true"
-        android:textSize="28sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.viewpager.widget.ViewPager
+                android:layout_marginTop="10dp"
+                android:id="@+id/view_pager_offers"
+                android:layout_width="match_parent"
+                android:layout_height="224dp" />
+
+            <me.relex.circleindicator.CircleIndicator
+                android:id="@+id/circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/view_pager_offers"
+                android:layout_centerHorizontal="true"
+                android:padding="16dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_offer_cards"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/view_pager_offers"
+                android:layout_marginTop="10dp" />
+        </RelativeLayout>
+
+
+    </androidx.core.widget.NestedScrollView>
+
+
+
 
 </RelativeLayout>
